fixed the z-index of the upper bar

--- a/src/components/defaultcomps/subComponents/UpperBar/subComponents/upper_bar.css
+++ b/src/components/defaultcomps/subComponents/UpperBar/subComponents/upper_bar.css
@@ -8,6 +8,7 @@
     background-color: var(--neutral-background-color);
     left: 0;   
     height: 55px;
+    z-index: 99999999;
 }
 
 .page-logo-div {
